update maven dependencies + cleanup, fixes #4026
update maven dependencies + cleanup, fixes #4026