@@ -33,11 +33,6 @@
     </parent>
 
     <properties>
-        <!-- Test running configuration -->
-        <maven-surefire-plugin.reuseForks>true</maven-surefire-plugin.reuseForks>
-        <maven-surefire-plugin.argLine>-Duser.timezone=UTC -Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US
-            --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
-        </maven-surefire-plugin.argLine>
         <!-- Third-party dependencies -->
         <xml-apis-ext.version>1.3.04</xml-apis-ext.version>
         <spring.framework.version>4.3.2.RELEASE</spring.framework.version>
